--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ html{
 
   }
 
-  #countertext{
+  .countertext{
     position: relative;
     display: flex;
     justify-content: center;
     text-align: center;
   }
-  
+
   #sidebar{
       flex: 15%;
       display: block;
